ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.192.168.64.3.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
