ingress-kubestate.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kube-state
  namespace: monitoring
spec:
  rules:
  - host: kube.192.168.64.3.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-state-metrics
          servicePort: 8080
